--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img class="fsociety" src="Assets/Images/card_back_small.png">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="Assets/Images/elliot.png">
+                <img class="card-value" src="Assets/Images/elliot.jpg">
             </div>
         </div>
         <div class="card">
@@ -44,7 +44,7 @@
                 <img class="fsociety" src="Assets/Images/card_back_small.png">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="Assets/Images/elliot.png">
+                <img class="card-value" src="Assets/Images/angela.jpg">
             </div>
         </div>
         <div class="card">
@@ -52,7 +52,7 @@
                 <img class="fsociety" src="Assets/Images/card_back_small.png">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="Assets/Images/elliot.png">
+                <img class="card-value" src="Assets/Images/darlene.jpg">
             </div>
         </div>
         <div class="card">
@@ -60,7 +60,104 @@
                 <img class="fsociety" src="Assets/Images/card_back_small.png">
             </div>
             <div class="card-front card-face">
-                <img class="card-value" src="Assets/Images/elliot.png">
+                <img class="card-value" src="Assets/Images/joanna.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/dominique.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/mrRobot.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/price.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/tyrell.jpg">
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/elliot.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/angela.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/darlene.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/joanna.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/dominique.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/mrRobot.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/price.jpg">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face">
+                <img class="fsociety" src="Assets/Images/card_back_small.png">
+            </div>
+            <div class="card-front card-face">
+                <img class="card-value" src="Assets/Images/tyrell.jpg">
             </div>
         </div>
     </div>
