--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
             
         </table>
     </div>
-    <div class="user-form">
-        <label>Nickname:</label>
-        <input id="nick" type="text" name="nickname">
+    <div class="user-form-container">
+        <input id="nick" type="text" name="nickname" placeholder="NICKNAME">
     </div>
     <div class="menu-container">
         <div class="menu-item dropdown dropdown-dark">
@@ -52,7 +51,7 @@
         <span class="overlay-text-small">Click to Restart</span>
     </div>
     <div id="card-grid" class="game-container">
-        <div class="game-info-container">
+        <div id="game-info-id" class="game-info-container">
             <div class="game-info">
                 Time: <span id="time-remaining"></span>
             </div>
