--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </table>
     </div>
     <div class="user-form-container">
-        <input id="nick" type="text" name="nickname" placeholder="NICKNAME">
+        <input id="nick" type="text" name="nickname" placeholder="Enter your nickname">
     </div>
     <div class="menu-container">
         <div class="menu-item dropdown dropdown-dark">
